--- a/Ilevus/Views/package.json
+++ b/Ilevus/Views/package.json
@@ -2,15 +2,15 @@
   "name": "ilevus",
   "version": "1.0.0",
   "description": "ilevus",
-  "scripts": {
-    "whichnode": "where webpack",
-    "prestart": "npm install",
-    "devbuild": "set NODE_ENV=development && webpack --progress --colors -d",
-    "devstart": "set NODE_ENV=development && webpack-dev-server --compress --progress --colors --port 8081 --inline --watch --watch-poll --content-base . --history-api-fallback",
-    "devwatch": "set NODE_ENV=development && webpack --watch --colors --progress -d",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "webpack --colors --progress --config webpack.production.config.js --optimize-dedupe --optimize-occurrence-order --optimize-minimize --history-api-fallback"
-  },
+		"scripts": {
+				"whichnode": "where webpack",
+				"prestart": "npm install",
+				"devbuild": "set NODE_ENV=development && webpack --progress --colors -d",
+				"devstart": "set NODE_ENV=development && webpack-dev-server --compress --progress --colors --port 8081 --inline --watch --watch-poll --content-base . --history-api-fallback",
+				"devwatch": "set NODE_ENV=development && webpack --watch --colors --progress -d",
+				"test": "echo \"Error: no test specified\" && exit 1",
+				"deploy": "webpack --colors --progress --config webpack.production.config.js --optimize-minimize"
+		},
   "author": "Ilevus",
   "devDependencies": {
     "autoprefixer": "^6.3.7",
