--- a/Ilevus/Views/package.json
+++ b/Ilevus/Views/package.json
@@ -33,6 +33,7 @@
     "style-loader": "^0.13.0",
     "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
     "url-loader": "^0.5.6",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1"
   },
   "dependencies": {
