--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -394,7 +394,9 @@
     <Content Include="Views\jsx\vendor\utils.js" />
     <Content Include="Views\webpack.config.js" />
     <Content Include="Views\webpack.production.config.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
