--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -314,6 +314,8 @@
     <Compile Include="MongoMigrations\M004_AdsEntity.cs" />
     <Compile Include="MongoMigrations\M005_Definitions.cs" />
     <Compile Include="MongoMigrations\M006_BalanceEntity.cs" />
+    <Compile Include="MongoMigrations\M007_AdsEntity.cs" />
+    <Compile Include="MongoMigrations\M008_ReportAdsEntity.cs" />
     <Compile Include="Providers\IlevusPermissionsProvider.cs" />
     <Compile Include="Providers\IlevusOAuthProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -626,7 +628,7 @@
     <Content Include="Views\jsx\core\view\admin\AdminPanelModerationAds.jsx" />
     <Content Include="Views\jsx\core\view\admin\AdminPanelReports.jsx" />
     <Content Include="Views\jsx\core\widget\AdRowBar.jsx" />
-    <Content Include="Views\jsx\core\view\admin\AdminPanelReportPreview.jsx" />
+    <Content Include="Views\jsx\core\view\admin\AdminPanelReportAds.jsx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="build\**">
