--- a/Ilevus/Views/package.json
+++ b/Ilevus/Views/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint src src-example private webpack.config.js",
     "storybook": "start-storybook -p 9001 -c private/storybook",
     "storybook:example": "npm run env:example -- npm run storybook",
-    "dev": "npm run env:dev -- webpack-dev-server",
+    "dev": "npm run env:dev -- webpack-dev-server --compress --progress --colors --port 8081 --inline --watch --watch-poll --content-base . --history-api-fallback",
     "dev:example": "npm run env:example -- npm run dev",
     "build:clean": "rimraf \"dist/!(.git*|Procfile)**\"",
     "build:copy": "copyfiles -u 1 public/* public/**/* dist",
@@ -23,94 +23,55 @@
   },
   "author": "Ilevus",
   "devDependencies": {
+    "@kadira/storybook": "^2.35.2",
+    "babel-core": "^6.21.0",
+    "babel-eslint": "^7.1.1",
+    "babel-jest": "^18.0.0",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-react-remove-prop-types": "^0.3.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-1": "^6.16.0",
+    "copyfiles": "^1.0.0",
+    "cross-env": "^3.1.4",
+    "del-cli": "^0.2.1",
+    "enzyme": "^2.7.0",
+    "eslint": "^3.14.0",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-import-resolver-webpack": "^0.8.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-no-unused-vars-rest": "^1.0.4",
+    "eslint-plugin-react": "^6.9.0",
+    "file-loader": "^0.10.0",
+    "html-webpack-plugin": "^2.26.0",
+    "jest-cli": "^18.1.0",
+    "json-loader": "^0.5.4",
+    "opn-cli": "^3.1.0",
+    "raw-loader": "^0.5.1",
+    "react-addons-test-utils": "^15.4.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0",
     "@storybook/addon-actions": "^3.0.0",
     "@storybook/react": "^3.0.0",
     "@webpack-blocks/dev-server2": "^0.4.0",
     "@webpack-blocks/webpack2": "^0.4.0",
-    "autoprefixer": "^6.3.7",
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^8.0.1",
-    "babel-jest": "^21.0.0",
-    "babel-loader": "^7.0.0",
     "babel-plugin-styled-components": "^1.1.4",
-    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.0",
-    "babel-preset-env": "^1.3.3",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "copyfiles": "^1.0.0",
-    "cross-env": "^5.0.0",
-    "css-loader": "^0.22.0",
     "delay": "^2.0.0",
-    "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
-    "eslint": "^4.9.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-import-resolver-webpack": "^0.8.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.0.1",
-    "exports-loader": "^0.6.2",
-    "extract-text-webpack-plugin": "^0.9.1",
-    "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.30.1",
-    "imports-loader": "^0.6.5",
-    "jest-cli": "^21.0.1",
-    "json-loader": "^0.5.4",
-    "node-sass": "^3.6.0",
-    "opn-cli": "^3.1.0",
-    "postcss-loader": "^0.9.1",
-    "raw-loader": "^0.5.1",
-    "react-intl-currency-input": "^0.1.8",
     "react-test-renderer": "^16.0.0",
     "redux-mock-store": "^1.2.3",
     "rimraf": "^2.6.1",
-    "sass-loader": "^3.2.0",
-    "style-loader": "^0.13.0",
-    "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "webpack-assets-by-type-plugin": "^0.1.0",
     "webpack-blocks-happypack": "^0.1.3",
-    "webpack-blocks-server-source-map": "^0.2.0",
-    "webpack-blocks-split-vendor": "^0.2.1",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-child-config-plugin": "^0.1.0",
-    "webpack-dev-server": "^2.3.0",
-    "webpack-node-externals": "^1.5.4",
-    "webpack-spawn-plugin": "^0.1.1"
+    "webpack-blocks-split-vendor": "^0.2.0",
+    "webpack-bundle-analyzer": "^2.9.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.20.0",
-    "express": "^4.16.2",
-    "history": "^4.6.1",
-    "isomorphic-fetch": "^2.2.1",
-    "lodash": "^4.17.4",
-    "normalizr": "3.2.4",
-    "prop-types": "^15.5.8",
-    "query-string": "^5.0.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-helmet": "^5.0.3",
-    "react-hot-loader": "^3.1.1",
-    "react-modal": "^3.1.0",
-    "react-redux": "^5.0.1",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
-    "react-router-server": "^4.2.1",
-    "redux": "^3.6.0",
-    "redux-form": "^7.0.0",
-    "redux-saga": "^0.16.0",
-    "redux-saga-thunk": "^0.5.0",
-    "serialize-javascript": "^1.3.0",
-    "simple-load-script": "^1.0.2",
-    "styled-components": "^2.0.0",
-    "styled-theme": "^0.3.0",
-    "styled-tools": "^0.2.2",
-    "validator": "^9.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.20.0",
     "backbone": "^1.3.3",
     "blueimp-file-upload": "^9.12.4",
     "bootstrap": "^4.0.0-alpha.6",
@@ -120,29 +81,52 @@
     "create-react-class": "^15.5.2",
     "daterangepicker": "^2.1.25",
     "exports-loader": "^0.6.4",
+    "express": "^4.16.2",
     "flux": "^2.1.1",
+    "history": "3.0.0",
+    "isomorphic-fetch": "^2.2.1",
     "jquery": "3",
     "jquery-maskmoney": "^3.0.2",
+    "lodash": "^4.17.4",
     "marked": "^0.3.5",
     "moment": "2.x.x",
     "moment-range": "^2.2.0",
+    "normalizr": "3.2.4",
     "numeral": "2.x.x",
     "popper.js": "^1.12.5",
+    "prop-types": "^15.5.8",
+    "query-string": "^5.0.0",
+    "react": "^15.4.1",
     "react-autocomplete": "^1.7.1",
     "react-boron": "^0.1.4",
     "react-chartjs-2": "^2.0.5",
     "react-color": "^2.11.4",
     "react-doc-meta": "^0.2.0",
     "react-document-title": "^2.0.3",
+    "react-dom": "^15.4.1",
+    "react-helmet": "^5.0.3",
+    "react-hot-loader": "^3.0.0-beta.6",
     "react-intl": "^2.3.0",
     "react-maskedinput": "^3.2.0",
+    "react-modal": "^1.6.5",
+    "react-redux": "^5.0.1",
+    "react-router": "^2.4.0",
     "react-select": "^1.0.0-rc.5",
     "react-stripe-elements": "^1.2.0",
+    "redux": "^3.6.0",
+    "redux-form": "^7.0.0",
+    "redux-saga": "^0.16.0",
+    "redux-saga-thunk": "^0.5.0",
+    "serialize-javascript": "^1.3.0",
+    "simple-load-script": "^1.0.2",
     "string": "^3.3.1",
+    "styled-components": "^1.2.1",
+    "styled-theme": "^0.3.0",
+    "styled-tools": "^0.1.2",
     "tether": "^1.3.2",
     "toastr": "^2.1.2",
     "underscore": "^1.8.3",
-    "webpack": "^3.7.1"
+    "validator": "^9.0.0"
   },
   "license": "UNLICENSED",
   "-vs-binding": {
