--- a/Ilevus/Views/package.json
+++ b/Ilevus/Views/package.json
@@ -30,9 +30,12 @@
     "babel-plugin-styled-components": "^1.1.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.3.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.20.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.0.15",
     "babel-preset-stage-1": "^6.16.0",
     "copyfiles": "^1.0.0",
     "cross-env": "^3.1.4",
@@ -57,7 +60,7 @@
     "react-test-renderer": "^16.0.0",
     "redux-mock-store": "^1.2.3",
     "rimraf": "^2.6.1",
-    "url-loader": "^0.5.7",
+    "url-loader": "^0.5.9",
     "webpack": "^2.2.1",
     "webpack-blocks-happypack": "^0.1.3",
     "webpack-blocks-split-vendor": "^0.2.0",
@@ -66,8 +69,6 @@
   },
   "dependencies": {
     "axios": "^0.17.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.20.0",
     "backbone": "^1.3.3",
     "blueimp-file-upload": "^9.12.4",
     "bootstrap": "^4.0.0-alpha.6",
@@ -123,7 +124,10 @@
     "tether": "^1.3.2",
     "toastr": "^2.1.2",
     "underscore": "^1.8.3",
-    "validator": "^9.0.0"
+    "validator": "^9.0.0",
+    "arc-theme": "^0.2.1",
+    "react-router-redux": "^4.0.6",
+    "react-router-scroll": "^0.4.1"
   },
   "license": "UNLICENSED",
   "-vs-binding": {
