--- a/Ilevus/Views/package.json
+++ b/Ilevus/Views/package.json
@@ -68,6 +68,7 @@
     "webpack-dev-server": "^2.3.0"
   },
   "dependencies": {
+    "arc-theme": "^0.2.1",
     "axios": "^0.17.0",
     "backbone": "^1.3.3",
     "blueimp-file-upload": "^9.12.4",
@@ -109,8 +110,11 @@
     "react-redux": "^5.0.1",
     "react-router": "^2.4.0",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.6",
+    "react-router-scroll": "^0.4.1",
     "react-select": "^1.0.0-rc.5",
     "react-stripe-elements": "^1.2.0",
+    "react-table": "^6.7.4",
     "redux": "^3.6.0",
     "redux-form": "^7.0.0",
     "redux-saga": "^0.16.0",
@@ -124,10 +128,7 @@
     "tether": "^1.3.2",
     "toastr": "^2.1.2",
     "underscore": "^1.8.3",
-    "validator": "^9.0.0",
-    "arc-theme": "^0.2.1",
-    "react-router-redux": "^4.0.6",
-    "react-router-scroll": "^0.4.1"
+    "validator": "^9.0.0"
   },
   "license": "UNLICENSED",
   "-vs-binding": {
