--- a/Ilevus/Views/package.json
+++ b/Ilevus/Views/package.json
@@ -11,7 +11,7 @@
     "postcoverage": "opn coverage/lcov-report/index.html",
     "lint": "eslint src src-example private webpack.config.js",
     "storybook": "start-storybook -p 9001 -c private/storybook",
-    "dev": "npm run env:dev -- webpack-dev-server --compress --progress --colors --port 8081 --inline --watch --watch-poll --content-base . --history-api-fallback",
+    "dev": "npm run env:dev -- webpack-dev-server --compress --progress --colors --port 8081",
     "build:clean": "rimraf \"dist/!(.git*|Procfile)**\"",
     "build:copy": "copyfiles -u 1 public/* public/**/* dist",
     "prebuild": "npm run build:clean && npm run build:copy",
@@ -52,6 +52,7 @@
     "eslint-plugin-react": "^6.9.0",
     "file-loader": "^0.10.0",
     "html-webpack-plugin": "^2.26.0",
+    "ignore-loader": "^0.1.2",
     "jest-cli": "^18.1.0",
     "json-loader": "^0.5.4",
     "opn-cli": "^3.1.0",
@@ -60,6 +61,7 @@
     "react-test-renderer": "^16.0.0",
     "redux-mock-store": "^1.2.3",
     "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.6",
     "url-loader": "^0.5.9",
     "webpack": "^2.2.1",
     "webpack-blocks-happypack": "^0.1.3",
@@ -89,6 +91,7 @@
     "marked": "^0.3.5",
     "moment": "2.x.x",
     "moment-range": "^2.2.0",
+    "node-sass": "^4.6.1",
     "normalizr": "3.2.4",
     "numeral": "2.x.x",
     "popper.js": "^1.12.5",
