--- a/Ilevus/Views/package.json
+++ b/Ilevus/Views/package.json
@@ -108,8 +108,10 @@
     "react-helmet": "^5.0.3",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-intl": "^2.3.0",
+    "react-intl-currency-input": "^0.1.8",
     "react-maskedinput": "^3.2.0",
     "react-modal": "^1.6.5",
+    "react-phone-input": "^1.2.1",
     "react-redux": "^5.0.1",
     "react-router": "^2.4.0",
     "react-router-dom": "^4.2.2",
